src/objects/Custom_Validation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>F1__c</fullName>
        <label>F1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F2__c</fullName>
        <label>F2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3__c</fullName>
        <label>F3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Validation</label>
</CustomObject>